[package]
name = "gst-plugin"
version = "0.4.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
categories = ["multimedia", "api-bindings"]
description = "Infrastructure for writing GStreamer plugins in Rust"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/tree/master/gst-plugin"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
documentation = "https://sdroege.github.io/rustdoc/gst-plugin/gst_plugin/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]

[dependencies]
libc = "0.2"
lazy_static = "1.0"
byteorder = "1.0"
gobject-subclass = { git = "https://github.com/gtk-rs/gobject-subclass" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gstreamer-sys = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys" }
gstreamer-base-sys = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys" }
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }

[lib]
name = "gst_plugin"
path = "src/lib.rs"

[features]
v1_10 = ["gstreamer/v1_10", "gstreamer-base/v1_10"]
v1_12 = ["gstreamer/v1_12", "gstreamer-base/v1_12", "v1_10"]
v1_14 = ["gstreamer/v1_14", "gstreamer-base/v1_14", "v1_12"]

