[package]
name = "gst-plugin"
version = "0.3.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
categories = ["multimedia", "api-bindings"]
description = "Infrastructure for writing GStreamer plugins in Rust"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gst-plugin/gst_plugin"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs/tree/master/gst-plugin"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]

[dependencies]
libc = "0.2"
lazy_static = "1.0"
byteorder = "1.0"
gobject-subclass = "0.2"
glib-sys = "0.7"
gobject-sys = "0.7"
gstreamer-sys = "0.6"
gstreamer-base-sys = "0.6"
glib = "0.6"
gstreamer = "0.12"
gstreamer-base = "0.12"

[lib]
name = "gst_plugin"
path = "src/lib.rs"

[features]
v1_10 = ["gstreamer/v1_10", "gstreamer-base/v1_10"]
v1_12 = ["gstreamer/v1_12", "gstreamer-base/v1_12", "v1_10"]
v1_14 = ["gstreamer/v1_14", "gstreamer-base/v1_14", "v1_12"]

