[package]
name = "gtk-examples"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>",
           "Dirk Van Haerenborgh <vhdirk@gmail.com>"]
repository = "https://github.com/vhdirk/gst-plugin-rs/gtk-examples"
license = "MIT/Apache-2.0"

[dependencies]
url = "1.1"
gobject-subclass = { path="../gobject-subclass" }

glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gtk-sys = { git = "https://github.com/gtk-rs/sys" }
gdk-sys = { git = "https://github.com/gtk-rs/sys" }
cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }

glib = { git = "https://github.com/gtk-rs/glib" }
gtk = { git = "https://github.com/gtk-rs/gtk" }
gdk = { git = "https://github.com/gtk-rs/gdk" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf" }
gio = { git = "https://github.com/gtk-rs/gio" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo" }
pango = { git = "https://github.com/gtk-rs/pango" }

[[bin]]
name = "cell-renderer-example"
path = "src/cell_renderer_example.rs"
