[package]
name = "webrtcsink"
version = "0.1.0"
edition = "2018"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
license = "MIT"
description = "GStreamer WebRTC sink"
repository = "https://github.com/centricular/webrtcsink/"
build = "build.rs"

[dependencies]
gst = { package = "gstreamer", version = "0.18", features = ["v1_20", "ser_de"] }
gst-app = { package = "gstreamer-app", version = "0.18", features = ["v1_20"] }
gst-video = { package = "gstreamer-video", version = "0.18", features = ["v1_20", "ser_de"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.18", features = ["v1_20"] }
gst-sdp = { package = "gstreamer-sdp", version = "0.18", features = ["v1_20"] }
gst-rtp = { package = "gstreamer-rtp", version = "0.18", features = ["v1_20"] }
once_cell = "1.0"
smallvec = "1"
anyhow = "1"
thiserror = "1"
futures = "0.3"
async-std = { version = "1", features = ["unstable"] }
async-tungstenite = { version = "0.16", features = ["async-std-runtime", "async-native-tls"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
fastrand = "1.0"

[dev-dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
uuid = { version = "0.8", features = ["v4"] }
clap = { version = "3.0.0-rc.1", features = ["derive"] }

[lib]
name = "webrtcsink"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7"

[features]
static = []
capi = []

[package.metadata.capi]
min_version = "0.8.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-rtp >= 1.20, gstreamer-webrtc >= 1.20, gstreamer-1.0 >= 1.20, gstreamer-app >= 1.20, gstreamer-video >= 1.20, gstreamer-sdp >= 1.20, gobject-2.0, glib-2.0, gmodule-2.0"

[[example]]
name = "webrtcsink-stats-server"
