[package]
name="webrtcsink-protocol"
version = "0.1.0"
edition = "2018"
authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
license = "MIT"
description = "GStreamer WebRTC sink default protocol"
repository = "https://github.com/centricular/webrtcsink/"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
