[package]
name = "gst-plugin-tutorial"
version.workspace = true
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository.workspace = true
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true
description = "GStreamer Rust Tutorial Plugin"

[dependencies]
gst.workspace = true
gst-base.workspace = true
gst-video.workspace = true
gst-audio.workspace = true
byte-slice-cast = "1.0"
num-traits = "0.2"

[lib]
name = "gstrstutorial"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[package.metadata.gstreamer]
release_date = "2025-10-31"
